Work in progress on the notes